v/syntaxError/cmudsp.d/alu.rtl/test/xmem.mem
zzzzzz
zzzzzz
zzzzzz	//  move #$0,r0
zzzzzz	//  move #$3,m0
zzzzzz	//  move #$0,r4
zzzzzz	//  move #$3,m4
zzzzzz	//  move #>$100,r1
zzzzzz	//  move #>$100,r1 (cont)
zzzzzz	//  move #>$300,r5
zzzzzz	//  move #>$300,r5 (cont)
zzzzzz	//  do #<$100,$110 ; p:endp
zzzzzz	//  do #<$100,$110 ; p:endp (cont)
zzzzzz	//  move y:(r1)+,x0 ; y:datin
zzzzzz	//  clr a x0,x:(r0)+ y:(r4)+,y0 ; x:states y:coef
zzzzzz	//  rep #<$3
000000	//  mac y0,x0,a x:(r0)+,x0 y:(r4)+,y0 ; x:(states+1) y:(coef+1)
000000	//  mac y0,x0,a x:(r0)+,x0 y:(r4)+,y0 ; x:(states+2) y:(coef+2)
000000	//  mac y0,x0,a x:(r0)+,x0 y:(r4)+,y0 ; x:(states+3) y:(coef+3)
zzzzzz	//  macr y0,x0,a (r0)-
zzzzzz	//  move a,y:(r5)+ ; y:datout
zzzzzz	//  move y:(r1)+,x0 ; y:(datin+1)
zzzzzz	//  clr a x0,x:(r0)+ y:(r4)+,y0 ; x:(states+3) y:coef
zzzzzz	//  rep #<$3
d7de05	//  mac y0,x0,a x:(r0)+,x0 y:(r4)+,y0 ; x:states y:(coef+1)
000000	//  mac y0,x0,a x:(r0)+,x0 y:(r4)+,y0 ; x:(states+1) y:(coef+2)
000000	//  mac y0,x0,a x:(r0)+,x0 y:(r4)+,y0 ; x:(states+2) y:(coef+3)
zzzzzz	//  macr y0,x0,a (r0)-
zzzzzz	//  move a,y:(r5)+ ; y:(datout+1)
zzzzzz	//  move y:(r1)+,x0 ; y:(datin+2)
zzzzzz	//  clr a x0,x:(r0)+ y:(r4)+,y0 ; x:(states+2) y:coef
zzzzzz	//  rep #<$3
0bfbc6	//  mac y0,x0,a x:(r0)+,x0 y:(r4)+,y0 ; x:(states+3) y:(coef+1)
d7de05	//  mac y0,x0,a x:(r0)+,x0 y:(r4)+,y0 ; x:states y:(coef+2)
000000	//  mac y0,x0,a x:(r0)+,x0 y:(r4)+,y0 ; x:(states+1) y:(coef+3)
zzzzzz	//  macr y0,x0,a (r0)-
zzzzzz	//  move a,y:(r5)+ ; y:(datout+2)
zzzzzz	//  move y:(r1)+,x0 ; y:(datin+3)
zzzzzz	//  clr a x0,x:(r0)+ y:(r4)+,y0 ; x:(states+1) y:coef
zzzzzz	//  rep #<$3
2d1c97	//  mac y0,x0,a x:(r0)+,x0 y:(r4)+,y0 ; x:(states+2) y:(coef+1)
